--- a/haesleinhuepf_bioimageanalysis_python/notebooks/02_python_advanced/02_for_loop_patterns.ipynb
+++ b/haesleinhuepf_bioimageanalysis_python/notebooks/02_python_advanced/02_for_loop_patterns.ipynb
@@ -166,7 +166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -180,12 +180,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "969a851f029e24cac96650de9444756d9c84aa27dd33459b5d90bd2986421b37"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
