--- a/notebooks/01_python_basics/1.python_overview.ipynb
+++ b/notebooks/01_python_basics/1.python_overview.ipynb
@@ -117,8 +117,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total = sum(measurements_friday + measurements_monday + measurements_thursday + measurements_tuesday + measurements_wednesday)\n",
-    "len   = len(measurements_friday + measurements_monday + measurements_thursday + measurements_tuesday + measurements_wednesday)"
+    "total = sum(\n",
+    "    measurements_friday\n",
+    "    + measurements_monday\n",
+    "    + measurements_thursday\n",
+    "    + measurements_tuesday\n",
+    "    + measurements_wednesday\n",
+    ")\n",
+    "len = len(\n",
+    "    measurements_friday\n",
+    "    + measurements_monday\n",
+    "    + measurements_thursday\n",
+    "    + measurements_tuesday\n",
+    "    + measurements_wednesday\n",
+    ")"
    ]
   },
   {
@@ -252,8 +264,9 @@
    ],
    "source": [
     "import numpy\n",
+    "\n",
     "measurements = numpy.asarray([1, 17, 25, 3, 5, 26, 12])\n",
-    "measurements\n"
+    "measurements"
    ]
   },
   {
@@ -355,8 +368,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "id = ['r1', 'r2', 'r3']\n",
-    "radius = [r1, r2, r3]\n"
+    "id = [\"r1\", \"r2\", \"r3\"]\n",
+    "radius = [r1, r2, r3]"
    ]
   },
   {
@@ -422,7 +435,7 @@
     }
    ],
    "source": [
-    "circles = pd.DataFrame({'id':id, 'radius': radius})\n",
+    "circles = pd.DataFrame({\"id\": id, \"radius\": radius})\n",
     "circles"
    ]
   },
@@ -437,7 +450,7 @@
     "id = 2\n",
     "\n",
     "for i in radius:\n",
-    "    area.append((i**2)*pi)"
+    "    area.append((i**2) * pi)"
    ]
   },
   {
@@ -477,7 +490,7 @@
     }
    ],
    "source": [
-    "data_table = pd.DataFrame({'id' : id, 'radius':radius, 'area':area})\n",
+    "data_table = pd.DataFrame({\"id\": id, \"radius\": radius, \"area\": area})\n",
     "print(data_table)"
    ]
   },
@@ -523,7 +536,7 @@
     "elif (time_hours >= 5) & (time_hours < 8):\n",
     "    print(\"evening\")\n",
     "else:\n",
-    "    print(\"night\")\n"
+    "    print(\"night\")"
    ]
   },
   {
@@ -542,7 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_names = ['dataset1.tif', 'dataset2.tif', 'summary.csv', 'readme.md', 'blobs.tif']"
+    "file_names = [\"dataset1.tif\", \"dataset2.tif\", \"summary.csv\", \"readme.md\", \"blobs.tif\"]"
    ]
   },
   {
@@ -561,7 +574,6 @@
     }
    ],
    "source": [
-    "\n",
     "for file in file_names:\n",
     "    # select files ending in .tif\n",
     "    if file.endswith(\".tif\"):\n",
@@ -617,10 +629,9 @@
     "pi = 3.14\n",
     "\n",
     "for radius in radii:\n",
-    "    area.append((radius**2)*pi)\n",
+    "    area.append((radius**2) * pi)\n",
     "\n",
-    "circle = [{\"radii\":radii, \n",
-    "            \"area\":area}]\n",
+    "circle = [{\"radii\": radii, \"area\": area}]\n",
     "\n",
     "circle"
    ]
@@ -648,9 +659,9 @@
    "outputs": [],
    "source": [
     "def square(number):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Squares a number by multiplying it with itself and returns its result.\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "\n",
     "    return number * number"
    ]
@@ -693,7 +704,7 @@
    ],
    "source": [
     "# show the docstring shown side-by-side in your notebook:\n",
-    "square?"
+    "?square"
    ]
   },
   {
@@ -725,7 +736,7 @@
     "number_of_points_in_exam = 8\n",
     "number_of_total_points_in_exam = 10\n",
     "\n",
-    "percent_grade = (number_of_points_in_exam/number_of_total_points_in_exam)*100\n",
+    "percent_grade = (number_of_points_in_exam / number_of_total_points_in_exam) * 100\n",
     "\n",
     "percent_grade"
    ]
@@ -737,8 +748,8 @@
    "outputs": [],
    "source": [
     "def percent_grade(number_of_points_in_exam, number_of_total_points_in_exam):\n",
-    "    \"\"\" calculate grade percentage \"\"\"\n",
-    "    result = (number_of_points_in_exam/number_of_total_points_in_exam)*100\n",
+    "    \"\"\"calculate grade percentage\"\"\"\n",
+    "    result = (number_of_points_in_exam / number_of_total_points_in_exam) * 100\n",
     "\n",
     "    return result"
    ]
@@ -760,7 +771,7 @@
     }
    ],
    "source": [
-    "percent_grade(9,10)"
+    "percent_grade(9, 10)"
    ]
   },
   {
@@ -777,7 +788,7 @@
     }
    ],
    "source": [
-    "calculated_grade = percent_grade(9,10)\n",
+    "calculated_grade = percent_grade(9, 10)\n",
     "\n",
     "\n",
     "if calculated_grade > 95:\n",
@@ -798,10 +809,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calculated_grade = percent_grade(9,10)\n",
+    "calculated_grade = percent_grade(9, 10)\n",
+    "\n",
     "\n",
     "def print_grade(calculated_grade):\n",
-    "    \"\"\" define categories for grade percentage \"\"\"\n",
+    "    \"\"\"define categories for grade percentage\"\"\"\n",
     "    if calculated_grade > 95:\n",
     "        print(\"Student grade 1\")\n",
     "    elif (calculated_grade > 80) & (calculated_grade < 95):\n",
@@ -828,7 +840,7 @@
     }
    ],
    "source": [
-    "calculated_grade = percent_grade(15,30)\n",
+    "calculated_grade = percent_grade(15, 30)\n",
     "print_grade(calculated_grade)"
    ]
   }
