--- a/notebooks/02_python_advanced/02_for_loop_patterns.ipynb
+++ b/notebooks/02_python_advanced/02_for_loop_patterns.ipynb
@@ -28,22 +28,20 @@
    "source": [
     "# function to print a pattern\n",
     "def pattern(n):\n",
-    "\n",
     "    # outer loop handle number of rows\n",
     "    # n rows\n",
     "    for i in range(0, n):\n",
-    "\n",
-    "        #inner loop to handle number of cols\n",
+    "        # inner loop to handle number of cols\n",
     "        # values changing according to outer loop\n",
-    "        for j in range(0, i+1):\n",
-    "\n",
+    "        for j in range(0, i + 1):\n",
     "            # print stars\n",
-    "            print(\"* \", end = \"\")\n",
-    "        \n",
+    "            print(\"* \", end=\"\")\n",
+    "\n",
     "        # ending line after each row\n",
     "        print(\"\\r\")\n",
     "\n",
-    "# input \n",
+    "\n",
+    "# input\n",
     "n = 5\n",
     "pattern(n)"
    ]
@@ -74,15 +72,14 @@
     }
    ],
    "source": [
-    "num_rows = int(input(\"enter the number of rows\"));\n",
+    "num_rows = int(input(\"enter the number of rows\"))\n",
     "\n",
     "# outer loop rows\n",
     "for i in range(0, num_rows):\n",
-    "    \n",
-    "    #inner loop cols dep on i\n",
-    "    for j in range(0, num_rows-i-1):\n",
+    "    # inner loop cols dep on i\n",
+    "    for j in range(0, num_rows - i - 1):\n",
     "        print(end=\" \")\n",
-    "    for j in range(0, i+1):\n",
+    "    for j in range(0, i + 1):\n",
     "        print(\"*\", end=\" \")\n",
     "    print()"
    ]
@@ -113,14 +110,14 @@
     }
    ],
    "source": [
-    "#Program to print Left Half Pyramid\n",
-    "num_rows = int(input(\"Enter the number of rows\"));\n",
-    "k =1\n",
+    "# Program to print Left Half Pyramid\n",
+    "num_rows = int(input(\"Enter the number of rows\"))\n",
+    "k = 1\n",
     "\n",
     "for i in range(0, num_rows):\n",
     "    for j in range(0, k):\n",
     "        print(\"* \", end=\" \")\n",
-    "    k = k+ 1\n",
+    "    k = k + 1\n",
     "    print()"
    ]
   },
@@ -157,7 +154,7 @@
     "for i in range(0, num_rows):\n",
     "    for j in range(0, k):\n",
     "        print(end=\" \")\n",
-    "    k = k -2\n",
+    "    k = k - 2\n",
     "    for j in range(0, i + 1):\n",
     "        print(\"* \", end=\" \")\n",
     "    print()"
