--- a/notebooks/image_deconvolution/intro_image_deconvolution.ipynb
+++ b/notebooks/image_deconvolution/intro_image_deconvolution.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = cells3d()[30,1,120:190,80:150]"
+    "image = cells3d()[30, 1, 120:190, 80:150]"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "perfect_psf = np.zeros( (25,25) )\n",
+    "perfect_psf = np.zeros((25, 25))\n",
     "perfect_psf[12, 12] = 1"
    ]
   },
@@ -158,7 +158,7 @@
     "# example PSF by blurring it with a Gaussian blur.\n",
     "psf = gaussian(perfect_psf, sigma=2)\n",
     "\n",
-    "plt.imshow(psf)\n"
+    "plt.imshow(psf)"
    ]
   },
   {
