--- a/notebooks/02_python_advanced/01_python_advanced.ipynb
+++ b/notebooks/02_python_advanced/01_python_advanced.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "p = (1.5, 6.4, 7.3)\n",
-    "q = (3.4, 1.0, 0.9)\n"
+    "q = (3.4, 1.0, 0.9)"
    ]
   },
   {
@@ -73,19 +73,19 @@
     "import matplotlib.pyplot as plt\n",
     "from skimage.measure import label\n",
     "\n",
+    "\n",
     "def count_blobs(image, threshold_algorithm):\n",
-    "    # binarize the image using a given \n",
+    "    # binarize the image using a given\n",
     "    # threshold-algorithm\n",
     "    threshold = threshold_algorithm(image)\n",
     "    binary = image > threshold\n",
-    "    \n",
+    "\n",
     "    # show intermediate result\n",
-    "    #plt.imshow(binary)\n",
-    "    \n",
+    "    # plt.imshow(binary)\n",
+    "\n",
     "    # return count blobs\n",
     "    labels = label(binary)\n",
-    "    return labels.max()\n",
-    "    "
+    "    return labels.max()"
    ]
   },
   {
@@ -117,7 +117,8 @@
    "source": [
     "from skimage.io import imread, imshow\n",
     "from skimage import data\n",
-    "image = imread('./data/blobs.tif')\n",
+    "\n",
+    "image = imread(\"./data/blobs.tif\")\n",
     "\n",
     "imshow(image)"
    ]
@@ -284,8 +285,8 @@
     }
    ],
    "source": [
-    "# this object is callable \n",
-    "sum_of_3_and_4()\n"
+    "# this object is callable\n",
+    "sum_of_3_and_4()"
    ]
   },
   {
@@ -305,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sum_of_3_and_b = partial(compute_sum, 3)\n"
+    "sum_of_3_and_b = partial(compute_sum, 3)"
    ]
   },
   {
@@ -400,7 +401,7 @@
    "outputs": [],
    "source": [
     "fixed_point = (1, 1, 1)\n",
-    "list_of_points = [(2,1,1), (1,1,3), (2,2,2)]"
+    "list_of_points = [(2, 1, 1), (1, 1, 3), (2, 2, 2)]"
    ]
   },
   {
@@ -430,7 +431,6 @@
     }
    ],
    "source": [
-    "\n",
     "for point in list_of_points:\n",
     "    print(partial(point))"
    ]
@@ -481,11 +481,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "workflow = Workflow()\n",
     "\n",
     "# define denoising\n",
-    "workflow.set(\"denoised\", gaussian, \"input\", sigma = 2)"
+    "workflow.set(\"denoised\", gaussian, \"input\", sigma=2)"
    ]
   },
   {
@@ -503,11 +502,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# define segmentation\n",
+    "\n",
     "\n",
     "def threshold(image):\n",
     "    return image > threshold_otsu(image)\n",
+    "\n",
+    "\n",
     "workflow.set(\"binarized\", threshold, \"denoised\")"
    ]
   },
@@ -10304,7 +10305,7 @@
     "        for j in range(100):\n",
     "            sum = sum + x\n",
     "        sum = sum + y\n",
-    "    image[x,y] = sum"
+    "    image[x, y] = sum"
    ]
   },
   {
@@ -10418,9 +10419,11 @@
    "outputs": [],
    "source": [
     "def process_image_parallel(image):\n",
-    "    Parallel(n_jobs=-1)(delayed(slow_thing)(image, x, y) \n",
-    "                        for y in range(image.shape[0]) \n",
-    "                        for x in range(image.shape[1]))"
+    "    Parallel(n_jobs=-1)(\n",
+    "        delayed(slow_thing)(image, x, y)\n",
+    "        for y in range(image.shape[0])\n",
+    "        for x in range(image.shape[1])\n",
+    "    )"
    ]
   },
   {
@@ -10520,12 +10523,12 @@
     "    \"\"\"\n",
     "    Tests a function on a couple of image sizes and returns time taken for processing\n",
     "    \"\"\"\n",
-    "    sizes = np.arange(1, 5)* 10\n",
+    "    sizes = np.arange(1, 5) * 10\n",
     "\n",
     "    benchmark_data = []\n",
     "\n",
     "    for size in sizes:\n",
-    "        print(\"Size\", size) \n",
+    "        print(\"Size\", size)\n",
     "\n",
     "        # make new data\n",
     "        image = np.zeros((size, size))\n",
@@ -10534,7 +10537,7 @@
     "        partial_function = partial(target_function, image)\n",
     "\n",
     "        # measure execution time\n",
-    "        time_in_s = timeit.timeit(partial_function, number = 10)\n",
+    "        time_in_s = timeit.timeit(partial_function, number=10)\n",
     "        print(\"time\", time_in_s, \"s\")\n",
     "\n",
     "        # store results\n",
@@ -10612,8 +10615,8 @@
     }
    ],
    "source": [
-    "plt.scatter(benchmark_normal[:,0] ** 2, benchmark_normal[:,1])\n",
-    "plt.scatter(benchmark_parallel[:,0] ** 2, benchmark_parallel[:,1])\n",
+    "plt.scatter(benchmark_normal[:, 0] ** 2, benchmark_normal[:, 1])\n",
+    "plt.scatter(benchmark_parallel[:, 0] ** 2, benchmark_parallel[:, 1])\n",
     "plt.legend([\"normal\", \"parallel\"])\n",
     "plt.xlabel(\"Image size in pixels\")\n",
     "plt.ylabel(\"Compute time in s\")\n",
@@ -10641,7 +10644,7 @@
     "        for j in range(image.shape[0]):\n",
     "            for k in range(image.shape[0]):\n",
     "                for l in range(image.shape[0]):\n",
-    "                    sum = sum + image[i,j] - k + l\n",
+    "                    sum = sum + image[i, j] - k + l\n",
     "        sum = sum + i\n",
     "        image[i, j] = sum / image.shape[1] / image.shape[0]"
    ]
@@ -10687,7 +10690,7 @@
     }
    ],
    "source": [
-    "plt.scatter(benchmark_data_silly_sum[:,0] ** 2, benchmark_data_silly_sum[:,1])\n",
+    "plt.scatter(benchmark_data_silly_sum[:, 0] ** 2, benchmark_data_silly_sum[:, 1])\n",
     "plt.legend([\"normal\"])\n",
     "plt.xlabel(\"Image size in pixels\")\n",
     "plt.ylabel(\"Compute time in s\")\n",
@@ -10720,8 +10723,8 @@
     "\n",
     "from numba import jit\n",
     "\n",
-    "@jit\n",
     "\n",
+    "@jit\n",
     "def process_image_compiled(image):\n",
     "    for x in range(image.shape[1]):\n",
     "        for y in range(image.shape[1]):\n",
@@ -10767,9 +10770,11 @@
    "outputs": [],
    "source": [
     "def process_image_compiled_parallel(image):\n",
-    "    Parallel(n_jobs=-1)(delayed(process_image_compiled)(image)\n",
-    "                        for x in range(image.shape[1])\n",
-    "                        for y in range(image.shape[1]))"
+    "    Parallel(n_jobs=-1)(\n",
+    "        delayed(process_image_compiled)(image)\n",
+    "        for x in range(image.shape[1])\n",
+    "        for y in range(image.shape[1])\n",
+    "    )"
    ]
   },
   {
